can display individual images by clicking on an image on main feed page

--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -42,4 +42,18 @@ body {
       }
     }
   }
+
+  .image-detail {
+    // border: 1px solid #ccc;
+
+    .image {
+
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+  }
 }
