--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -9,6 +9,8 @@ body {
     padding: 0;
 
     .card {
+      border: 1px solid #ccc;
+
       width: 300px;
       height: 500px;
       background: #ccc;
