--- a/public/views/feed.html
+++ b/public/views/feed.html
@@ -1,7 +1,7 @@
 <h1>Feed View</h1>
 
 <ul class="feed-list" ng-init="init()">
-  <li ng-repeat="image in feed" class="list-item">
+  <li ng-repeat="image in feed | orderBy:'-created'" class="list-item">
     <div class="card">
       <div class="card-image">
         <a href="#/image/{{image.provider}}/{{image.referenceId}}"><img ng-src="{{image.url}}" alt="{{image.url}}"></a>
@@ -9,11 +9,12 @@
       <div class="card-description">
         <ul>
           <li><b>{{image.provider}}</b></li>
+          <li>{{image.created | date:"MM/dd/yyyy 'at' h:mma"}}</li>
           <li>{{image.referenceId}}</li>
           <li>{{image.author}}</li>
           <li>{{image.votes}}</li>
           <li>{{image.views}}</li>
-          <li>{{image.comments.count}}</li>
+          <!-- <li>{{image.comments.count}}</li> -->
           <li>{{image.caption}}</li>
         </ul>
       </div>
