pagination function, but not for instagram

--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -58,4 +58,14 @@ body {
       margin: 0;
     }
   }
+
+  .clearfix {
+    clear: both;
+    overflow: auto;
+    zoom: 1;
+  }
+
+  .center {
+    text-align: center;
+  }
 }
