--- a/public/views/feed.html
+++ b/public/views/feed.html
@@ -22,3 +22,8 @@
   </li>
 </ul>
 
+<div class="clearfix"></div>
+
+<div class="page-button center">
+  <a title="Next page" ng-click="nextPage()">Next</a>
+</div>
